lib/libremidi/tests/corpus/Invalid/No Header Chunk/MissYou.mid
vti_encoding:SR|utf8-nl
vti_timelastmodified:TR|07 Nov 2000 13:33:56 -0000
vti_author:SR|a1771550
vti_modifiedby:SR|a1771550
vti_timecreated:TR|15 Nov 2000 13:25:43 -0000
vti_backlinkinfo:VX|index_t.htm co.htm
vti_extenderversion:SR|4.0.2.3712
vti_syncwith_localhost\\c\:\\documents and settings\\kevin liu\\my documents\\my webs\\translation/c\:/documents and settings/kevin liu/my documents/my webs/translation:TR|07 Nov 2000 13:33:56 -0000
